@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-19T16:18:40Z",
+  "timestamp" : "2022-06-20T08:21:01Z",
   "count_outdated" : 343,
   "uniques_outdated" : 195,
   "count" : 370,
-  "uniques" : 213,
+  "uniques" : 214,
   "clones" : [
     {
       "timestamp": "2022-06-06T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-06-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
