@@ -1,3 +1,10 @@
+2022-06-20T08:21:01Z:
+* notice: last 14d: unq all: 5 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 195 343 / 213 370
+* notice: next accum: outdated-unq outdated-all / unq all: 195 343 / 214 370
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-06 2022-06-20]
+
 2022-06-19T16:18:40Z:
 * notice: last 14d: unq all: 5 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 194 342 / 212 369
